Add Poe provider integration
User will be able to select "Poe" as a provider in the dropdown menu, and view all
the available models. All models which has "text" as an output modality will be
included.

API key validation.
Pricing computation.
Handle null value from prompt caching info.
Placeholder logic for fetching price remained. (TODO: backend change).

Reviewers:

Test Plan: pnpm test; followed the DEVELOPMENT.md guide to test e2e; created a .vsix file and installed onto VSCodet show.

--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -344,6 +344,8 @@
 		"codestralBaseUrlDesc": "Set an alternative URL for the Codestral model.",
 		"xaiApiKey": "xAI API Key",
 		"getXaiApiKey": "Get xAI API Key",
+		"poeApiKey": "Poe API Key",
+		"getPoeApiKey": "Get Poe API Key",
 		"litellmApiKey": "LiteLLM API Key",
 		"litellmBaseUrl": "LiteLLM Base URL",
 		"awsCredentials": "AWS Credentials",
